--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.0
+version: 5.1.5+10
 
 environment:
   sdk: ">=2.1.2 <3.0.0"
@@ -37,12 +37,13 @@ dependencies:
   fluttertoast: ^3.1.0
   location: ^2.3.5
   qr_flutter: ^2.0.0+51
-  flutter_local_notifications: 6.1.1
+  flutter_local_notifications: 9.8.0+1
   flutter_spinkit: ^3.1.0
   font_awesome_flutter: ^8.5.0
   firebase_crashlytics: 2.0.0
   firebase_analytics: 9.0.0
   dio: 4.0.6
+  url_launcher: ^6.1.5
 
 
 
